# Self

./: .env  README.md  db_config.py  db_helper.py  main.py  models.py  pyproject.toml  schemas.py  service.py  views.py
alembic/: env.py
alembic/versions/: 2024_07_01_1124-7de3cc6fdbd0_.py
